# twic2

./: .atom-build.js  .dockerignore  .gitignore  Dockerfile  Makefile  README.md  index.html
backend/: config.json  stack.yaml  twic.cfg-template  twic.json  twic2.cabal
backend/src/: Config.hs  Main.hs
backend/src/BL/: CloudDataLayer.hs  Core.hs  Instances.hs  Parser.hs  Types.hs  Utils.hs  Worker.hs
backend/src/UI/HTTP/: App.hs  Css.hs  Html.hs  Json.hs
frontend/: stack.yaml  twic2ui.cabal
frontend/src/: App.hs  Main.hs  Types.hs  UIConfig.hs  UIMain.hs
frontend/src/Components/: Busy.hs  Counter.hs  Feed.hs  Login.hs  NewReply.hs  Notification.hs  UserInfo.hs
frontend/src/Foreign/JavaScript/: Utils.hs
frontend/src/Lib/: FRP.hs  FW.hs  Net.hs  UI.hs  WebSocket.hs
frontend/src/Twic2UI/Net/: WebSocket.hs
frontend/src/Twic2UI/Net/WebSocket/: Foreign.hs
webexe/: all.js
