
name:                twic2ui
version:             0.1.0.0
synopsis:            Web front-end for Twic2
Description:         Twic is a simple reader of a Twitter user's home feed. It's main goal is a search of a better Twitter feed usage experience.
License:             AllRightsReserved
Author:              Eugene Naumenko eugene.naumenko@gmail.com
Maintainer:          eugene.naumenko@gmail.com
Stability:           Experimental
Category:            Web
build-type:          Simple
cabal-version:       >=1.10


executable twic2ui
  other-modules:       BL.Types
                     , BL.Instances
                     , Components.Counter
                     , Components.Feed
                     , Components.UserInfo
                     , Components.Notification
                     , Components.Busy
                     , Types
                     , App
                     , UIConfig
                     , Lib.FRP
                     , Lib.FW
                     , Lib.UI
                     , Lib.WebSocket
                     , Lib.Net

  main-is:             UIMain.hs

  hs-source-dirs:      src, ../backend/src
  default-language:    Haskell2010
  cpp-options:         -DGHCJS_BROWSER
  ghc-options:         -fno-warn-typed-holes

  build-depends:       base
                     , base-prelude
                     , aeson
                     , bytestring
                     , bytestring-conversion
                     , time
                     , text
                     , twitter-types
                     , reflex
                     , containers
                     , virtualdom
                     , reflex-host
                     , ghcjs-prim
                     , mtl
                     , unordered-containers
                     , html-entities
                     , network-uri
  if impl(ghcjs)
    build-depends: ghcjs-base
  if !impl(ghcjs)
    build-depends: ghcjs-base-stub >= 0.1.0.2 && < 1                   
